--- a/.gitignore
+++ b/.gitignore
@@ -228,3 +228,9 @@ math_companion/*.nav
 math_companion/*.snm
 math_companion/*.vrb
 math_companion/auto/
+
+# Ignore everything in zisk/
+soundcalc/zkvms/zisk/*
+
+# Except these two files
+!soundcalc/zkvms/zisk/get_zisk_config.sh
